--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
-.carousel-item img{
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=PT+Serif&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto&family=Rubik&display=swap');
+body{
+    font-family: 'Poppins', sans-serif;
+}
+.height-fix img{
     height: 80vh;
+}
+h2{
+    font-size: 48px;
+}
+.svg-color{
+    color: rgba(82, 67, 194, 1);    
+}
+.btn-design{
+    background-color: rgba(244, 150, 210, 0.192) ;
 }
