--- a/style.css
+++ b/style.css
@@ -14,3 +14,7 @@ h2{
 .btn-design{
     background-color: rgba(244, 150, 210, 0.192) ;
 }
+.best-package{
+    border-radius: 40px;
+    box-shadow: 0px 42px 34px 0px rgba(63, 135, 245, 0.25);
+}
