--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
-.height-fix img{
-    height: 80vh;
-}
-h2{
+
+h1{
     font-size: 48px;
 }
 .svg-color{
@@ -17,4 +15,29 @@ h2{
 .best-package{
     border-radius: 40px;
     box-shadow: 0px 42px 34px 0px rgba(63, 135, 245, 0.25);
+}
+@media (max-width:850px) {
+    .height-fix img{
+        height: 50vh;
+    }
+    h1{
+        font-size: 16px;
+        font-weight: 400;
+    }
+    .header-p{
+        font-size: 10px;
+        font-weight: 100;
+    }
+    .header-btn{
+        font-size: 4px;
+    }
+}
+
+@media  (max-width:1024px) {
+    .toast-position{
+        position: relative;
+        top: 100px;
+        height: 50%;
+    }
+
 }
